<resources>
    <string name="app_name">Loan Payment Calculator Application</string>

    <string name="calcLoanPayment">Calculate Loan Payment"</string>
    <string name="principle">Principle ($)</string>
    <string name="interestRate">Interest Rate (%)</string>
    <string name="timePeriod">Time Period (months)</string>
    <string name="extraPayment">Extra Principle Payment (optional)</string>
    <string name="submit">submit</string>
    <string name="title_activity_loan_details">LoanDetailsActivity</string>
    <string name="zero">0.00</string>
    <string name="loan_details">Loan Details</string>
    <string name="amortization_schedule">Amortization Schedule</string>
    <string name="print">Print</string>


</resources>
