<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    tools:context=".MainActivity"
    android:weightSum="1" >

    <!-- Screen Title -->
    <TextView
        android:id="@+id/textViewId_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:paddingStart="25dp"
        android:textAlignment="center"
        android:textSize="14pt"
        android:text="@string/calcLoanPayment"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

    <!--Amount of Loan ($USD)-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textViewId_principle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/principle"
            android:layout_marginStart="10dp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/editTextId_principle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:inputType="numberDecimal"
            android:saveEnabled="true"
            tools:ignore="Autofill,LabelFor" />
    </LinearLayout>

    <!--Interest Rate (%)-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
            android:id="@+id/textViewId_interestRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/interestRate"
            android:layout_marginStart="10dp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/editTextId_interestRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:inputType="numberDecimal"
            android:saveEnabled="true"
            tools:ignore="Autofill,LabelFor" />
    </LinearLayout>

    <!-- time Period (months)-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textViewId_timePeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/timePeriod"
            android:layout_marginStart="10dp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/editTextId_timePeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:inputType="number"
            android:saveEnabled="true"
            tools:ignore="Autofill,LabelFor" />
    </LinearLayout>

    <!--  Extra Payment Option-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textViewId_extraPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/extraPayment"
            android:layout_marginStart="10dp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/editTextId_extraPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:inputType="numberDecimal"
            android:text="@string/zero"
            android:saveEnabled="true"
            tools:ignore="Autofill,LabelFor" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textViewId_monthlyPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/textViewId_totalCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/textViewId_totalInterest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonId_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        android:text="@string/submit" />

</LinearLayout>